--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 </a>
             </div>
             <ul class="nav-menu">
+                <li><a href="#home" class="nav-link">home.</a></li>
                 <li><a href="#about" class="nav-link">about.</a></li>
                 <li><a href="#contact" class="nav-link">contact.</a></li>
             </ul>
@@ -28,13 +29,13 @@
         </div>
     </nav>
 
-    <!-- About Section -->
-    <section id="about" class="about">
+    <!-- Home Section -->
+    <section id="home" class="about">
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <p>Hello! I'm a French FPV pilot based in <strong>Barcelona</strong>, flying both indoors and outdoors using <strong>5-inch</strong> for long range and <strong>3-inch</strong> for indoors.</p>
-                    <p>I love flying and delivering the best content in the best way possible. I have my own fleet of gear using <strong>GoPro</strong>, <strong>DJI</strong> and <strong>Insta360</strong> ranging from action-cam, 360º and integrated cameras.</p>
+                    <p>I'm a French FPV pilot based in <strong>Barcelona</strong>, flying both indoors and outdoors using <strong>5-inch</strong> for long range and <strong>3-inch</strong> for indoors.</p>
+                    <p>I love flying and delivering the best content in the best way possible. I also have my own fleet of gear ranging from a <strong>GoPro HERO13</strong> to the <strong>Insta360 X5</strong>.</p>
                 </div>
                 <div class="about-image">
                     <img src="placeholder-profile.jpg" alt="Profile Picture" class="profile-img">
@@ -74,7 +75,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="portfolio" class="about">
+    <section id="about" class="about">
         <div class="container">
             <h2>about me.</h2>
 
