added location information for videos

--- a/index.html
+++ b/index.html
@@ -51,24 +51,28 @@
                         <source src="assets/greece1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                    <div class="video-location">🇬🇷 Athens, Greece</div>
                 </div>
                 <div class="video-item">
                     <video autoplay muted loop playsinline>
                         <source src="assets/greece2.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                    <div class="video-location">🇬🇷 Kape Beach, Greece</div>
                 </div>
                 <div class="video-item">
                     <video autoplay muted loop playsinline>
                         <source src="assets/kazakhstan1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                    <div class="video-location">🇰🇿 Black Canyon, Kazakhstan</div>
                 </div>
                 <div class="video-item">
                     <video autoplay muted loop playsinline>
                         <source src="assets/kazakhstan2.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                    <div class="video-location">🇰🇿 Astana, Kazakhstan</div>
                 </div>
             </div>
         </div>
