added barcelona and narbonne

--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
                     </video>
                     <div class="video-location">🇰🇿 Astana, Kazakhstan</div>
                 </div>
+                <div class="video-item">
+                    <video autoplay muted loop playsinline>
+                        <source src="assets/barcelona1.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="video-location">🇪🇸 Barcelona, Spain</div>
+                </div>
+                <div class="video-item">
+                    <video autoplay muted loop playsinline>
+                        <source src="assets/france1.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="video-location">🇫🇷 Narbonne, France</div>
+                </div>
             </div>
         </div>
     </section>
