--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FPV Pilot - Piron Cyprien</title>
+    <title>FPV Pilot Portfolio - Piron Cyprien</title>
+    <meta name="description" content="Professional FPV drone pilot based in Barcelona. Specializing in aerial cinematography for events, real estate, and commercial projects across Europe.">
+    <meta name="keywords" content="FPV pilot, drone pilot, aerial cinematography, Barcelona, Spain, Greece, Kazakhstan, France, professional drone services">
+    <meta name="author" content="Piron Cyprien">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pironc.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pironc.com/">
+    <meta property="og:title" content="FPV Pilot Portfolio - Piron Cyprien">
+    <meta property="og:description" content="Professional FPV drone pilot based in Barcelona. Specializing in aerial cinematography for events, real estate, and commercial projects across Europe.">
+    <meta property="og:image" content="https://pironc.com/assets/fpv.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pironc.com/">
+    <meta property="twitter:title" content="FPV Pilot Portfolio - Piron Cyprien">
+    <meta property="twitter:description" content="Professional FPV drone pilot based in Barcelona. Specializing in aerial cinematography for events, real estate, and commercial projects across Europe.">
+    <meta property="twitter:image" content="https://pironc.com/assets/fpv.jpg">
+
     <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
@@ -11,6 +31,38 @@
     <link rel="manifest" href="assets/icon/site.webmanifest">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Piron Cyprien",
+        "jobTitle": "FPV Drone Pilot",
+        "description": "Professional FPV drone pilot based in Barcelona, specializing in aerial cinematography for events, real estate, and commercial projects across Europe.",
+        "url": "https://pironc.com/",
+        "image": "https://pironc.com/assets/fpv.jpg",
+        "sameAs": [
+            "https://www.tiktok.com/@zypriano",
+            "https://www.linkedin.com/in/cyprien-piron/"
+        ],
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Barcelona",
+            "addressCountry": "Spain"
+        },
+        "knowsLanguage": ["French", "English", "Spanish"],
+        "hasOccupation": {
+            "@type": "Occupation",
+            "name": "FPV Drone Pilot",
+            "occupationLocation": {
+                "@type": "City",
+                "name": "Barcelona",
+                "addressCountry": "Spain"
+            }
+        }
+    }
+    </script>
 </head>
 <body>
     <!-- Navigation -->
