updated images, text

--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>I'm a French FPV pilot based in <strong>Barcelona</strong>, flying both indoors and outdoors using <strong>5-inch</strong> for long range and <strong>3-inch</strong> for indoors.</p>
+                    <p>For extra cinematic or accurately zoomed-in shots, the <strong>DJI Mavic 3</strong> is my go-to drone.</p>
                     <p>I love flying and delivering the best content in the best way possible. I also have my own fleet of gear ranging from a <strong>GoPro HERO13</strong> to the <strong>Insta360 X5</strong>.</p>
                 </div>
                 <div class="about-image">
-                    <img src="placeholder-profile.jpg" alt="Profile Picture" class="profile-img">
+                    <img src="assets/fpv.jpg" alt="Profile Picture" class="profile-img">
                 </div>
             </div>
         </div>
@@ -156,7 +157,7 @@
 
             <div class="about-content">
                 <div class="about-image">
-                    <img src="assets/fpv.jpg" alt="FPV Flying" class="profile-img">
+                    <img src="assets/selfie.jpg" alt="FPV Flying" class="profile-img">
                 </div>
                 <div class="about-text">
                     <p>I fluently speak <strong>French, English and Spanish</strong> to be able to meet most of clients' needs and be able to make myself understood.</p>
@@ -197,7 +198,7 @@
                     </div>
                 </div>
                 <div class="contact-image">
-                    <img src="assets/selfie.jpg" alt="Profile Photo" class="profile-img">
+                    <img src="assets/fpv2.jpg" alt="Profile Photo" class="profile-img">
                 </div>
             </div>
         </div>
